--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="confirmHeight">Confirm</string>
+    <string name="start_button">Begin\nWalk</string>
+    <string name="end_button">End\nWalk</string>
 </resources>
