--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MainPage</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">Fitness Tracking</string>
+    <string name="title_walk">Walking Now</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="start_button">Start\nWalk</string>
